--- a/typst.toml
+++ b/typst.toml
@@ -1,8 +1,12 @@
 [package]
 name = "ouset"
-version = "0.1.1"
+version = "0.2.0"
 entrypoint = "ouset.typ"
 authors = ["Ludwig Austermann"]
 license = "MIT"
 description = "Package providing over- and underset functions for math mode."
 repository = "https://github.com/ludwig-austermann/typst-ouset"
+compiler = "0.11.0"
+exclude = ["examples"]
+keywords = ["alignment", "math", "equations"]
+categories = ["layout"]
